--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,4 @@
 set -g history-limit 5000
+set -g base-index 1
+set -g pane-base-index 1
 set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l /usr/local/bin/zsh"
