Latest dotfiles updates.

--- a/.tmuxinator/market.yml
+++ b/.tmuxinator/market.yml
@@ -5,4 +5,5 @@ windows:
       layout: 8589,270x59,0,0{195x59,0,0,0,74x59,196,0[74x29,196,0,4,74x29,196,30,5]}
       panes:
           - nvm use 8; git status
-          - nvm use 8; npm start
+          - nvm use 8; npm run dev
+          - nvm use 8; npm test:unit:watch
