--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,2 @@
 set -g history-limit 5000
-set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l /usr/local/bin/zsh"
+set-option -g default-shell /bin/zsh
